--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 </section>
 </main>
 
-<footer class="footer_things">
+<footer class="footer_things section">
     <div class="container">
 
     <a class="header-logo" href="#"><span class="nazwa-klasy-3">Web</span><span class="nazwa-klasy-4">Studio</span></a>
