--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Studio</title>
 </head>
 <body>
+    <div class="text">
 
     <header class="header">
         <div class="container">
@@ -158,6 +159,6 @@
     </address>
 </div>
 </footer>
-
+</div>
 </body>
 </html>
