--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <title>Studio</title>
 </head>
 <body>
-    <div class="text">
+<div class="mobile-text">
+<div class="non-mobile">
+<div class="text">
 
     <header class="header">
         <div class="container">
@@ -159,6 +161,8 @@
     </address>
 </div>
 </footer>
+</div>
+</div>
 </div>
 </body>
 </html>
